fix: Export CSV button now links to actual endpoint
- Changed href='#' to url_for('instructor.export_csv') in analytics.html
- Export button now properly triggers CSV file download

--- a/src/web/templates/analytics.html
+++ b/src/web/templates/analytics.html
@@ -48,8 +48,8 @@
                 <button type="submit" class="btn btn-primary w-100">
                     <i class="fas fa-filter"></i> Apply Filters
                 </button>
-                <a href="#" class="btn btn-success ms-2">
-                    <i class="fas fa-download"></i>
+                <a href="{{ url_for('instructor.export_csv') }}" class="btn btn-success ms-2" title="Export CSV">
+                    <i class="fas fa-download"></i> Export
                 </a>
             </div>
         </form>
