--- a/src/web/templates/profile.html
+++ b/src/web/templates/profile.html
@@ -157,7 +157,7 @@
                 <div class="card-body p-3">
                     <div class="mb-3">
                         <small class="text-muted d-block">Account ID</small>
-                        <code class="small">{{ current_user.id }}</code>
+                        <code class="small">{{ current_user.get_id() }}</code>
                     </div>
                     <div class="mb-3">
                         <small class="text-muted d-block">Role</small>
