--- a/src/web/templates/assignment/create.html
+++ b/src/web/templates/assignment/create.html
@@ -76,6 +76,18 @@
                                 min="0" max="100">
                         </div>
 
+                        <div class="mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="is_published" name="is_published"
+                                    checked>
+                                <label class="form-check-label" for="is_published">
+                                    <i class="fas fa-globe text-success me-1"></i> Publish Immediately
+                                    <small class="text-muted d-block">Students will be able to see and submit to this
+                                        assignment</small>
+                                </label>
+                            </div>
+                        </div>
+
                         <div class="d-flex gap-2">
                             <button type="submit" class="btn btn-success">
                                 <i class="fas fa-save me-1"></i> Create Assignment
