--- a/src/web/templates/assignment_detail.html
+++ b/src/web/templates/assignment_detail.html
@@ -182,7 +182,8 @@
                     <span class="stat-label">Pass Rate</span>
                     <span class="stat-value">{{ "%.1f"|format(stats.pass_rate) }}%</span>
                 </div>
-                <a href="#" class="btn btn-outline-info w-100 mt-3">
+                <a href="{{ url_for('assignment.view_submissions', assignment_id=assignment.get_id()) }}"
+                    class="btn btn-outline-info w-100 mt-3">
                     <i class="fas fa-list"></i> View All Submissions
                 </a>
             </div>
