--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -88,7 +88,13 @@
                             <i class="fas fa-user"></i> {{ current_user.name }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('student.profile') }}">Profile</a></li>
+                            <li>
+                                {% if current_user.role == 'instructor' %}
+                                <a class="dropdown-item" href="{{ url_for('instructor.profile') }}">Profile</a>
+                                {% else %}
+                                <a class="dropdown-item" href="{{ url_for('student.profile') }}">Profile</a>
+                                {% endif %}
+                            </li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
